@@ -38,6 +38,7 @@ lib/god/contacts/campfire.rb
 lib/god/contacts/email.rb
 lib/god/contacts/jabber.rb
 lib/god/contacts/twitter.rb
+lib/god/contacts/webhook.rb
 lib/god/dependency_graph.rb
 lib/god/diagnostics.rb
 lib/god/driver.rb
