@@ -53,6 +53,7 @@ require 'god/conditions/file_mtime'
 
 require 'god/contact'
 require 'god/contacts/email'
+require 'god/contacts/webhook'
 begin
   require 'god/contacts/twitter'
 rescue LoadError
@@ -478,6 +479,19 @@ module God
       info[name] = {:state => w.state, :group => w.group}
     end
     info
+  end
+  
+  # Send a signal to each task.
+  #   +name+ is the String name of the task or group
+  #   +signal+ is the signal to send. e.g. HUP, 9
+  #
+  # Returns String[]:task_names
+  def self.signal(name, signal)
+    items = Array(self.watches[name] || self.groups[name]).dup
+    jobs = []
+    items.each { |w| jobs << Thread.new { w.signal(signal) } }
+    jobs.each { |j| j.join }
+    items.map { |x| x.name }
   end
   
   # Log lines for the given task since the specified time.
