@@ -9,6 +9,7 @@
     * Campfire - send messages to 37signals' Campfire [github.com/hellvinz]
   * Minor Enhancements
     * Add watch log_cmd that can be reopened with STDOUT instead of a log file [github.com/jberkel]
+    * Added webhook output support [Martyn Loughran]
 
 == 0.7.9 / 2008-08-06
   * Major Enhancements
